Add countdown page

--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
 <link href="style.css" rel="stylesheet" type="text/css" media="all">
 <link href="bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-
 <body class="lucida">
-
-<!-- open top --><div id="top">
 
 <header>
 
@@ -49,7 +45,7 @@
 <h1 id="headline">&#8220;[EVENT_TITLE]&#8221;</h1>
 </div>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In justo dolor, pellentesque sit amet volutpat non, vehicula ut quam. Quisque feugiat justo sit amet arcu placerat in condimentum neque pharetra. Proin turpis est, placerat nec accumsan ut, gravida et orci. Donec eleifend sapien ut enim luctus sit amet blandit diam vulputate.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In justo dolor, pellentesque sit amet volutpat non, vehicula ut quam. Quisque feugiat justo sit amet arcu placerat in condimentum neque pharetra.</p>
 </div>
 
 <div class="float float-forty">
