Add thankyou, replay, live and countdown pages plus adjustments and corresponding files

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 <link href="style.css" rel="stylesheet" type="text/css" media="all">
 <link href="bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-
 <body class="lucida">
 
 <!-- open top --><div id="top">
@@ -43,7 +41,7 @@
 <div class="float float-sixty">
 
 <div class="peace">
-<img src="_images/globe.png" alt="" class="float-left" />
+<img src="img/globe.png" alt="" class="float-left" />
 
 <h2 id="sub-headline" class="red">[EVENT_TYPE]:</h2>
 <h1 id="headline">&#8220;[EVENT_TITLE]&#8221;</h1>
